--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
-    "target": "es6",
-    "module": "commonjs",
+    "target": "es2022",
+    "module": "nodenext",
     "sourceMap": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true
+    "moduleResolution": "nodenext",
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
   },
   "exclude": ["node_modules"]
 }
